Add heading and description

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Time Calculator</title>
+    <meta name="description" content="Free Web tutorials" />
+    <meta name="keywords" content="Time, Time-zones, Durations, Luxon" />
+    <meta name="author" content="Marco Brack" />
   </head>
   <body>
     <div id="root"></div>
